// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Decorator for Vue Render 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: pink; border-color: pink;"
    >
      renders component: MyButton!
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom|Decorator for Vue Template 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: rgb(66, 185, 131); border-color: #42b983;"
    >
      MyButton with template!
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom|Decorator for Vue With Data 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <pre>
      {
  "id": "custom-decorator-for-vue--with-data",
  "kind": "Custom|Decorator for Vue",
  "name": "With Data",
  "story": "With Data",
  "customContext": 52,
  "parameters": {
    "fileName": "/Users/jetbrains/IdeaProjects/storybook/examples/vue-kitchen-sink/src/stories/custom-decorators.stories.js",
    "options": {
      "hierarchyRootSeparator": {},
      "hierarchySeparator": {}
    },
    "docs": {
      "iframeHeight": "60px"
    },
    "globalParameter": "globalParameter",
    "framework": "vue",
    "customParameter": 42
  }
}
    </pre>
  </div>
</div>
`;
